--- a/assets/images/Contact Page_files/style.css
+++ b/assets/images/Contact Page_files/style.css
@@ -125,7 +125,8 @@ input[type=text] {
 }
 
 #mainMessage {
-    padding-bottom: 100px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 #footer {
