--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
 body {
-    background-image: url(../images/light-grey-terrazzo.png);
+    background-image: url(../images/wavegrid_@2X.png);
     background-color: #CEE1E8;
-
+    height: 100%;
+    width: 100%;
     margin: 0;
 }
 
@@ -10,7 +11,7 @@ body {
     margin: 0;
     padding: 0;
     height: 97px;
-    border-bottom: 2px solid #93C3E1;
+    border-bottom: 2px solid #c1cbd7;
 }
 
 .mainNav {
@@ -20,20 +21,24 @@ body {
     position: relative;
 }
 
-#head {
-    background-color: #6094ac;
-    font-size: 32px;
-    color: white;
+.head {
+    background-color: #8696a7;
     width: 280px;
-    text-align: center;
+    height: 97px;
     float: left;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    margin-top: 0;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    position: absolute;
+    position: relative;
     top: 0;
-    
+}
+
+#head {
+    font-size: 40px;
+    color: white;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin: 0;
+    position: absolute;
+    top: 25%;
+    transform: translate(12.5%, 0);
+
 }
 
 #button-1{
@@ -74,6 +79,22 @@ body {
 
 a:link {
     text-decoration: none;
+    background-color: white;
+}
+
+a:visited {
+    text-decoration: none;
+    background-color: white;
+}
+
+a:hover {
+    text-decoration: underline;
+    background-color: #9ca8b8;
+}
+
+a:active {
+    text-decoration: underline;
+    background-color: #9ca8b8;
 }
 
 .main {
@@ -83,23 +104,27 @@ a:link {
     width: 960px;
     margin: auto;
     margin-top: 50px;
+    margin-bottom: 110px;
     border-style: solid;
     border-width: 1px;
-    border-color: #c4d2d4;
+    border-color: #c1cbd7;
+    min-height: 100%;
 }
 
 #aboutMe {
+    padding-top: 40px;
+    padding-bottom: 30px;
     padding-left: 40px;
-    font-size: 32px;
+    font-size: 40px;
     font-weight: bold;
-    color: #618195;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #8696a7;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 #divider1 {
     float: center;
-    background-color: #5AAEE1;
-    background: radial-gradient(#5AAEE1, rgba(255,0,0,0));
+    background-color: #abc6d3;
+    background: radial-gradient(#abc6d3, rgba(255,0,0,0));
     height: 3px;
     width: 880px;
     margin-left: 40px;
@@ -107,15 +132,19 @@ a:link {
 
 #headshot {
     float: left;
+    clear: both;
     padding: 40px;
+    width: 240px;
+    height: 320px;
 }
 
 #content {
     padding-left: 40px;
     padding-right: 40px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 40px;
+    padding-bottom: 40px;
     font-size: 18px;
+    line-height: 1.6;
     color: #777777;
     font-family: Arial, Helvetica, sans-serif;
     position: relative;
@@ -155,26 +184,28 @@ input[type=text] {
     padding-bottom: 100px;
 }
 
-#footer {
-
+#divider2 {
     width: 100%;
-    background-color:#666666;
+    background-color: #9ca8b8;
+    height: 10px;
+    position: fixed;
+    bottom: 50px;
+}
+
+#footer {
+    width: 100%;
+    background-color:#656565;
     height: 50px;
-    text-align: center;
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 10px;
     position: fixed;
     bottom: 0;
 }
 
-#divider2 {
-    float: left;
-    clear: both;
+#copyright {
     width: 100%;
-    background-color: #93C3E1;
-    height: 8px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
     position: fixed;
-    bottom: 50px;
-    margin: auto;
+    bottom: 5px;
 }
