--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,19 +26,16 @@ body {
     width: 280px;
     height: 97px;
     float: left;
-    position: relative;
-    top: 0;
+
 }
 
 #head {
-    font-size: 40px;
+    font-size: 32px;
+    font-weight: bold;
     color: white;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    margin: 0;
-    position: absolute;
-    top: 25%;
-    transform: translate(12.5%, 0);
-
+    text-align: center;
+    padding-top: 11%;
 }
 
 #button-1{
@@ -113,9 +110,9 @@ a:active {
 
 #aboutMe {
     padding-top: 40px;
-    padding-bottom: 30px;
+    padding-bottom: 25px;
     padding-left: 40px;
-    font-size: 40px;
+    font-size: 32px;
     font-weight: bold;
     color: #8696a7;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -141,7 +138,7 @@ a:active {
 #content {
     padding-left: 40px;
     padding-right: 40px;
-    padding-top: 40px;
+    padding-top: 30px;
     padding-bottom: 40px;
     font-size: 18px;
     line-height: 1.6;
